# zstddec

./: AUTHORS  Dockerfile  README.md  meson.build
.github/workflows/: ci.yml
src/: gstzstddec.c  gstzstddec.h
